--- a/package.json
+++ b/package.json
@@ -18,60 +18,60 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@codemirror/state": "^6.0.0",
-    "@codemirror/view": "^6.0.0",
+    "@codemirror/state": "^6.2.0",
+    "@codemirror/view": "^6.9.2",
     "@types/box-intersect": "^1.0.0",
     "@types/insert-text-at-cursor": "^0.3.0",
-    "@types/mark.js": "^8.11.5",
-    "@types/node": "^14.14.37",
+    "@types/mark.js": "^8.11.8",
+    "@types/node": "^18.15.3",
     "@types/raf-schd": "^4.0.1",
     "@types/textarea-caret": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "cross-env": "^7",
-    "esbuild-plugin-less": "^1.1.9",
-    "eslint": "^8.5.0",
-    "eslint-plugin-react": "^7.24.0",
+    "esbuild-plugin-less": "^1.1.13",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module-alias": "^1.1.0",
     "obsidian": "^0.15.3",
-    "obsidian-dataview": "^0.4.21",
-    "obsidian-plugin-cli": "^0.8.1",
-    "prettier": "^2.3.2",
-    "replace": "^1.2.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "obsidian-dataview": "^0.5.55",
+    "obsidian-plugin-cli": "^0.9.0",
+    "prettier": "^2.8.4",
+    "replace": "^1.2.2",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "animated-scroll-to": "^2.2.0",
+    "animated-scroll-to": "^2.3.0",
     "box-intersect": "^1.0.2",
     "choices.js": "9.0.1",
-    "classcat": "^5.0.3",
+    "classcat": "^5.0.4",
     "colord": "^2.9.3",
-    "deepmerge": "^4.2.2",
+    "deepmerge": "^4.3.0",
     "eventemitter3": "^4.0.7",
-    "fast-json-patch": "^3.1.0",
-    "file-selector": "^0.2.4",
-    "fuse.js": "^6.5.3",
+    "fast-json-patch": "^3.1.1",
+    "file-selector": "^0.6.0",
+    "fuse.js": "^6.6.2",
     "immutability-helper": "^3.1.1",
     "immutable-json-patch": "^1.1.2",
     "is-plain-object": "^5.0.0",
     "mark.js": "^8.11.1",
     "mdast": "^3.0.0",
-    "mdast-util-from-markdown": "^1.0.2",
-    "mdast-util-frontmatter": "^1.0.0",
-    "mdast-util-to-markdown": "^1.2.6",
-    "mdast-util-to-string": "^3.1.0",
+    "mdast-util-from-markdown": "^1.3.0",
+    "mdast-util-frontmatter": "^1.0.1",
+    "mdast-util-to-markdown": "^1.5.0",
+    "mdast-util-to-string": "^3.1.1",
     "micromark-util-character": "^1.1.0",
-    "micromark-util-types": "^1.0.1",
-    "monkey-around": "^2.1.0",
+    "micromark-util-types": "^1.0.2",
+    "monkey-around": "^2.3.0",
     "obsidian-daily-notes-interface": "^0.9.4",
-    "preact": "^10.8.2",
+    "preact": "^10.13.1",
     "react": "npm:@preact/compat",
     "react-colorful": "^5.6.1",
-    "react-cool-onclickoutside": "^1.6.1",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "npm:@preact/compat",
-    "unist-util-visit": "^4.1.0"
+    "unist-util-visit": "4.1.0"
   },
   "importSort": {
     ".js, .ts, .tsx": {
